<resources>
    <string name="app_name">BodyMass</string>
    <string name="bodymass">Body Mass</string>
    <string name="fat_mass">Fat Mass</string>
    <string name="wan_vael">Wan Vael</string>
    <string name="lorentz">Lorentz</string>
    <string name="creff">Creff</string>
    <string name="height">Height (cm)</string>
    <string name="waist">Waist circumference (cm)</string>
    <string name="age_in_years">Age (in years)</string>
    <string name="calculate">Calculate</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="broad">Broad</string>
    <string name="percentage">0.0%</string>
    <string name="_32">32+</string>
    <string name="_25">25</string>
    <string name="obes">Obes</string>
    <string name="_25_31">25 - 31</string>
    <string name="_18_24">18 - 24</string>
    <string name="average">Average</string>
    <string name="textview">TextView</string>
    <string name="_14_17">14 - 17</string>
    <string name="fitness">Fitness</string>
    <string name="_14_20">14 - 20</string>
    <string name="_6_13">6 - 13</string>
    <string name="athletes">Athletes</string>
    <string name="_10_13">10 - 13</string>
    <string name="_2_5">2 - 5</string>
    <string name="essential">Essential</string>
    <string name="_10"><![CDATA[<10]]></string>
    <string name="_2"><![CDATA[<2]]></string>
    <string name="extemely_low_level_of_fat">Extemely low level of fat</string>
    <string name="women">Women (%)</string>
    <string name="men">Men (%)</string>
    <string name="_21_24">21 - 24</string>
</resources>